# BumperBot

./: frames_2024-02-08_15.02.58.gv
install/: local_setup.sh  setup.sh
install/bumperbot_controller/lib/bumperbot_controller/: noisy_controller  simple_controller
install/bumperbot_controller/share/bumperbot_controller/: package.sh  package.xml
install/bumperbot_cpp_examples/lib/bumperbot_cpp_examples/: simple_parameter  simple_publisher  simple_service_client  simple_service_server  simple_subscriber  simple_tf_kinematics  simple_turtlesim_kinematics
install/bumperbot_cpp_examples/share/bumperbot_cpp_examples/: package.sh  package.xml
install/bumperbot_description/share/bumperbot_description/: local_setup.sh  package.sh
install/bumperbot_description/share/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro
install/bumperbot_localization/share/bumperbot_localization/: package.sh
install/bumperbot_msgs/share/bumperbot_msgs/: package.sh
install/bumperbot_py_examples/share/bumperbot_py_examples/: package.sh  package.xml
log/: latest_build  latest_list
src/bumperbot_controller/: CMakeLists.txt  package.xml
src/bumperbot_cpp_examples/: package.xml
src/bumperbot_cpp_examples/src/: simple_parameter.cpp  simple_tf_kinematics.cpp
src/bumperbot_description/: CMakeLists.txt  package.xml
src/bumperbot_description/rviz/: display.rviz
src/bumperbot_description/urdf/: bumperbot.urdf.xacro
src/bumperbot_py_examples/: package.xml
(+1 files in other folders)
